Revert changes to stable release